fix layout bugs

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -15,7 +15,6 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  height: 120vh;
   background-image: url("../public/pexels-photo-255379.jpeg");
   background-size: cover;
   background-position: center;
